# include_analyzer

./: CMakeLists.txt  README.md
cmake/: include_analizer.cmake  include_analizer_tmpl.cc
common/: CMakeLists.txt
common/lib_a/: CMakeLists.txt
common/lib_a/include/liba/: inca.h  inca.hpp  incb.h
common/lib_a/source/: src1.cc  src2.cc
common/lib_b/: CMakeLists.txt
common/lib_b/include/libb/: libbinc1.h  libbinc2.h  libbinc3.h  libbinc4.h
common/lib_b/source/: src1.cc  src2.cc
common/lib_c/: CMakeLists.txt
common/lib_c/include/: libcinc1.h  libcinc2.h
common/lib_c/source/: src1.cc  src2.cc
exec/: CMakeLists.txt
exec/include/: exec1.h
exec/source/: main.cc
